--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "build": "node ace build --production",
     "start": "node build/server.js",
     "test": "node ace test",
-    "migrate": "node ace migration:run"
+    "migrate": "node ace migration:run",
+    "queue": "node ace queue:listen"
+  },
+  "engines": {
+    "node": "16"
   },
   "devDependencies": {
     "@adonisjs/assembler": "^5.9.5",
@@ -20,9 +24,6 @@
     "typescript": "~4.6",
     "youch": "^3.2.3",
     "youch-terminal": "^2.2.2"
-  },
-  "engines": {
-    "node": "16"
   },
   "dependencies": {
     "@adonisjs/auth": "^8.2.3",
