--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,6 @@ PG_PORT=5432
 PG_USER=feliperalves
 PG_PASSWORD=DsyQ3x6CuzNU
 PG_DB_NAME=lucid
+QUEUE_REDIS_HOST=localhost
+QUEUE_REDIS_PORT=6379
+QUEUE_REDIS_PASSWORD=
